tests/toylang/neg/001665_mutation.toylang
program a = { while a sleep do; } .
